--- a/app/src/main/res/layout/store.xml
+++ b/app/src/main/res/layout/store.xml
@@ -47,21 +47,20 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:textColor="#6d7aad"
-                android:text="Tipo" />
+                android:text="Detalle" />
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:textColor="#6d7aad"
-                android:text="Estado" />
+                android:text="Precio" />
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:textColor="#6d7aad"
-                android:text="Consumo" />
+                android:textColor="#6d7aad" />
         </TableRow>
     </TableLayout>
 
@@ -194,6 +193,14 @@
         android:id="@+id/group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/buttonMeter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Consultar"
+        tools:layout_editor_absoluteX="162dp"
+        tools:layout_editor_absoluteY="524dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
