--- a/app/src/main/res/layout/my_order_table_row_item.xml
+++ b/app/src/main/res/layout/my_order_table_row_item.xml
@@ -29,7 +29,7 @@
         android:textColor="#000000" />
 
     <Button
-        android:id="@+id/cancelButton"
+        android:id="@+id/action_button"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginEnd="20dp"
